--- a/workflow/configs/config_BaP-EE2_oldTrans.yaml
+++ b/workflow/configs/config_BaP-EE2_oldTrans.yaml
@@ -6,4 +6,7 @@ KEY: "../key/u11bd@nelstor0.cbu.uib.no.txt"
 GENOME: "../ref/genome/gadMor2.fasta"
 TRANS: "../ref/trans/Gadus_morhua.gadMor1.cds.all.fa"
 ANNOT: "../ref/annotation/Gadus_morhua.gadMor1.88.gtf"
+HISAT2-BUILD: "../tools/hisat2-2.0.5/hisat2-build"
+HISAT2: "../tools/hisat2-2.0.5/hisat2"
+SAMTOOLS: "../tools/samtools-1.3.1/samtools"
 NCORE: "10"
